@@ -1,3 +1,8 @@
+2019-08-14  Richard Sandiford  <richard.sandiford@arm.com>
+
+	* gcc.target/aarch64/sve/peel_ind_1.c: Look for an inverted .B VL1.
+	* gcc.target/aarch64/sve/peel_ind_2.c: Likewise .S VL7.
+
 2019-08-14  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* g++.dg/parse/typedef9.C: Test locations too.
